--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation 'com.h2database:h2'
     // JPA
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    // Assert
+    testImplementation 'org.assertj:assertj-core:3.21.0'
 }
 
 tasks.named('bootBuildImage') {
