--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     testImplementation 'org.assertj:assertj-core:3.21.0'
     // Validation
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    // Spring Security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'
 }
 
 tasks.named('bootBuildImage') {
